# CSVInspector

./: README.md  pyproject.toml  setup.py
csvinspector/: cli.py  inspector.py
csvinspector/csvinspector/: __init__.py  inspector.py
csvinspector/examples/: basic_usage.py
examples/: basic_usage.py  example.csv
tests/: test_inspector.py
