[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvinspector"
version = "1.0.0"
description = "CSV Validation and Analysis Tool"
authors = [
    { name="Lukas VeliÄka", email="youremail@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/Lukasamba/csvinspector"
